--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ img-target-card{
 
 body{
   max-width: 900px;
-  margin: auto;
+  margin: 40px auto;
   font-size: 16px;
   font-family: 'Sniglet', cursive;
 }
@@ -32,6 +32,7 @@ nav ul li a{
   color: black;
   font-size: 1.2rem;
   letter-spacing: 0.2rem;
+  word-spacing: 0.2rem;
 }
 
 nav ul li a:hover{
@@ -57,8 +58,46 @@ nav ul li a:hover{
   border-radius: 15px;
   float: right;
   opacity: 0.85;
-  rotate: 0.02turn;
-  transition: ;
+  rotate: 0.02turn;  
+  box-shadow: 3px 4px black;
+}
+
+#projects{
+  line-height: 1.75rem;
+  padding: 0;
+  margin: 0;
+}
+
+#projects img{
+  float: left;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+#projects img:hover{
+  float: left;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+#projects a{
+  text-decoration: none;
+  color: black;
+  font-size: 1.2rem;
+  letter-spacing: 0.2rem;
+}
+
+#projects a:hover{
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+}
+
+.project{
+  width: 600px;
+  min-height: 400px;
+  display: none;
 }
 
 
