--- a/style.css
+++ b/style.css
@@ -78,25 +78,27 @@ nav ul li a:hover{
   float: left;
   margin: 10px;
   border-radius: 10px;
+  width: 400px;
+  height: auto;
 }
 
 #projects a{
   text-decoration: none;
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   letter-spacing: 0.2rem;
 }
 
 #projects a:hover{
   text-decoration: none;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   letter-spacing: 0.2rem;
 }
 
 .project{
   width: 600px;
-  min-height: 400px;
+  min-height: 300px;
   display: none;
 }
 
